2007-11-15:	PHOEBE GUI 0.30 released.
2007-11-01:	PHOEBE GUI 0.30 RC2 released.
2007-10-15:	PHOEBE GUI 0.30 RC1 released.