@@ -1,2 +1,0 @@
-#define SVN_DATE "$Date: 2012-07-08 12:30:51 -0400 (Sun, 08 Jul 2012) $"
-#define SVN_REV "$Rev: 1749 $"
